--- a/apps/newsletter-pro/package.json
+++ b/apps/newsletter-pro/package.json
@@ -21,12 +21,13 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@prisma/client": "^5.8.0",
+    "@prisma/client": "^6.17.1",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@supabase/supabase-js": "^2.75.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^4.36.1",
     "@tiptap/extension-placeholder": "^2.1.16",
@@ -56,7 +57,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "postcss": "^8.4.33",
-    "prisma": "^5.8.0",
+    "prisma": "^6.17.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
