--- a/apps/newsletter-pro/package.json
+++ b/apps/newsletter-pro/package.json
@@ -4,16 +4,14 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio",
     "seed": "tsx src/lib/seed.ts"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.908.0",
     "@crav/analytics": "file:../../packages/analytics",
     "@crav/credits-sdk": "file:../../packages/credits-sdk",
     "@crav/newsletter-spec": "file:../../packages/newsletter-spec",
@@ -60,6 +58,7 @@
     "postcss": "^8.4.33",
     "prisma": "^6.17.1",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.20.6",
     "typescript": "^5.3.3"
   }
 }
