--- a/apps/newsletter-pro/package.json
+++ b/apps/newsletter-pro/package.json
@@ -49,8 +49,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
+    "@types/node": "20.19.20",
+    "@types/react": "18.3.26",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
@@ -59,6 +59,6 @@
     "prisma": "^6.17.1",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.20.6",
-    "typescript": "^5.3.3"
+    "typescript": "5.9.3"
   }
 }
