--- a/apps/newsletter-pro/package.json
+++ b/apps/newsletter-pro/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
     "typecheck": "tsc --noEmit",
-    "seed": "tsx src/lib/seed.ts",
-    "postinstall": "prisma generate"
+    "seed": "tsx src/lib/seed.ts"
   },
   "dependencies": {
     "@aws-sdk/client-ses": "^3.908.0",
