CRITICAL: Preview-only deploys (github.autoAlias=false)

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,1 @@
-{
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "github": {
-    "autoAlias": false,
-    "silent": true
-  }
-}
+{"$schema":"https://openapi.vercel.sh/vercel.json","github":{"autoAlias":false}}
